--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,25 @@ html {
     font-family: 'Optima', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.center, .imageclass {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+img {
+    max-width: 500px;
+    min-width: 200px;
+    width: auto;
+    height: auto;
+}
+
 .center {
-    text-align: center;
     color: inherit;
+    min-width: 300px;
+    max-width: 700px;
+    height: auto;
+    margin: 1rem auto;
 }
 
 a {
@@ -23,8 +39,4 @@ a {
 
 li {
     text-align: left;
-}
-
-img {
-    width: 400px;
 }
